@@ -1,3 +1,4 @@
 mock
 sphinx>=1.6.4
 sphinxcontrib.bibtex
+sphinx_rtd_theme
