@@ -2,6 +2,5 @@
 Gallery
 =======
 
-TODO:
- - Automatically insert all images from the gallery folder.
- - Add new screenshots.
+.. simple_gallery::
+   :dir: gallery
